--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,49 @@
+body {
+    background: linear-gradient(0deg, #efeded, #145d7f 40%, #efeded);
+}
+
+.navbar {
+    width: 100%;
+    height: 100px;
+    background: #145d7f;
+    margin-bottom: 20px;
+}
+
+.allStatusFilter {
+    margin-bottom: 20px;
+    height: 20px;
+    display: flex;
+    justify-content: center;
+}
+
+input {
+    margin-left: 10px;
+    width: 150px;
+    outline: none;
+}
+
+
 .allEmployeeContainer {
     display: flex;
     justify-content: space-around;
 }
 
-.newEmployeeContainer {
-    /* background: pink; */
+.employeeBoxes {
+    background: #efeded;
+    width: 25%;
+    padding: 20px 20px;
+    border: 1px solid black;
+    margin-bottom: 80px;
 }
 
-.currentEmployeeContainer {
-    /* background: green; */
+.employeeBoxes div {
+    background: white;
+    margin-bottom: 20px;
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    border: 1px solid black;
 }
 
-.terminatedEmployeeContainer {
-    /* background: yellow; */
-}
