--- a/styles.css
+++ b/styles.css
@@ -1,31 +1,38 @@
 body {
     background: linear-gradient(0deg, #efeded, #145d7f 40%, #efeded);
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-.navbar {
-    width: 100%;
-    height: 100px;
-    background: #145d7f;
-    margin-bottom: 20px;
-}
+
 
 .allStatusFilter {
     margin-bottom: 20px;
-    height: 20px;
+    height: 200px;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
+    margin-top: 20px;
+    margin-left: 20px;
 }
 
 input {
     margin-left: 10px;
     width: 150px;
     outline: none;
+    height: 15px;
 }
 
 
 .allEmployeeContainer {
     display: flex;
     justify-content: space-around;
+}
+
+.allEmployeeContainer input {
+    margin-bottom: 20px;
+}
+
+.allEmployeeContainer h3 {
+    margin-bottom: 10px;
 }
 
 .employeeBoxes {
